--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <meta name="author" content="iCyberTech">
-<!--
-app name : Story Book,
-created by : iCyberTech,
-creator url : https//www.sololearn.com/Profile/9151475/?ref=app
-releasing date : 18-july-2020,
+
 
 
 <title>Story Book</title>
@@ -135,7 +131,7 @@ const stories = [
   wishlist:false,
   story:`
   <h2>SELECT SUBJECT</h2>
-  <iframe></iframe>
+  <iframe src=" https://littlemona.github.io/jhsa/" width="100%" height="80%"></iframe>
   <img src='https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQpMPYr6_CesH-1j6d5y3Dw04qgvEEG-IC5PQ&usqp=CAU' alt="" />
  
   <a href="https://www.sololearn.com/Profile/14931694/?ref=app">Follow</a>
